新闻资讯静态界面完成

--- a/web/src/pages/Home/home.less
+++ b/web/src/pages/Home/home.less
@@ -1,6 +1,7 @@
 html, body {
   margin: 0;
   padding: 0;
+  background-color: #eee;
 }
 
 .title {
@@ -15,4 +16,24 @@ html, body {
 .swiperWapper {
   height: 10.5rem;
   width: 100%;
+}
+
+.swiperContent {
+  height: 120px;
+  color: #999999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  user-select: none;
+}
+
+.newContent {
+  background-color: #fff;
+  width: 100%;
+  height: 15rem;
+  display: flex;
+  flex-direction: column;
+  padding: 0 1rem;
+  box-sizing: border-box;
 }
