完善首页广告位功能

--- a/web/src/pages/Home/home.less
+++ b/web/src/pages/Home/home.less
@@ -14,7 +14,7 @@ html, body {
 }
 
 .swiperWapper {
-  height: 10.5rem;
+  height: 10rem;
   width: 100%;
 }
 
@@ -67,6 +67,7 @@ html, body {
   justify-content: space-between;
   font-size: 14px;
   align-items: center;
+  margin-right: 1rem;
   margin-top: .5rem;
 }
 
@@ -75,5 +76,6 @@ html, body {
   height: 5rem;
   margin-right: 0.35rem;
   overflow: hidden;
+  border-radius: 50%;
   margin-bottom: 0.28rem;
 }
