--- a/web/src/pages/Article/article.less
+++ b/web/src/pages/Article/article.less
@@ -34,3 +34,15 @@ html, body {
         text-overflow: ellipsis;
     }
 }
+
+.articleDetail {
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+    iframe {
+      width: 100%;
+      height: auto;
+    }
+    -webkit-font-smoothing: antialiased;
+}
